samples/_failures_safe/1761330183_200352_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2b1da48.c: In function ‘main’:
./samples/SAFE/__tmp_f2b1da48.c:178:5: error: expected identifier or ‘(’ at end of input
  178 |     Matrix
      |     ^~~~~~
./samples/SAFE/__tmp_f2b1da48.c:178:5: error: expected declaration or statement at end of input
